tests/label/incomplete_expression.stderr
error: expected expression, found `]`
   --> $DIR/incomplete_expression.rs:5:2
    |
5   |     twist! { -label 'a | 1 + }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected expression
    |
   ::: $WORKSPACE/src/twist_impl.rs:168:36
    |
168 |     ( @label-expr ($($flag:tt)*) [ $e:expr ] -> $($l:tt)* ) => {
    |                                    ------- while parsing argument for this `expr` macro fragment
    |
    = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
